kubernetes/apps/pitower/ai/agentgateway/config/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agentgateway
spec:
  hostnames:
    - llm.wibrow.dev
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  rules:
    - backendRefs:
        - name: agentgateway
          port: 80
      timeouts:
        request: 600s
